@@ -1,3 +1,8 @@
+2012-11-27  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/GSHTTPURLHandle.m: Set content-length header in outgoing
+        request if not already set.
+
 2012-11-25 14:39-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/Foundation/NSMetadata.h
